@@ -45,6 +45,8 @@
         <!-- override parent dep.trino.version for sink freshness client -->
         <dep.trino.version>440</dep.trino.version>
         <dep.hive.jdbc.version>2.3.9</dep.hive.jdbc.version>
+        <dep.testcontainers.version>1.21.3</dep.testcontainers.version>
+        <docker.api.version>1.40</docker.api.version>
         <plugin.dockerfile-maven.version>1.4.13</plugin.dockerfile-maven.version>
     </properties>
 
@@ -262,6 +264,24 @@
             <version>${dep.junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${dep.testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mysql</artifactId>
+            <version>${dep.testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${dep.testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>io.apicurio</groupId>
@@ -471,6 +491,28 @@
                         <configuration>
                             <skipTests>false</skipTests>
                             <excludedGroups combine.self="override"></excludedGroups>
+                            <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED
+                                --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                                -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>cdc-validation</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <groups>integration &amp; cdc-validation</groups>
+                            <excludedGroups combine.self="override"></excludedGroups>
+                            <systemPropertyVariables>
+                                <api.version>${docker.api.version}</api.version>
+                            </systemPropertyVariables>
                             <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED
                                 --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                                 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager</argLine>
